--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stm32f411-hal"]
 	path = stm32f411-hal
 	url = https://github.com/m-kopka/stm32f411-hal.git
+[submodule "mini-kernel"]
+	path = mini-kernel
+	url = https://github.com/m-kopka/mini-kernel.git
